[gd_scene load_steps=21 format=3 uid="uid://c2cs7o58c4s4x"]

[ext_resource type="Script" uid="uid://cjb37vwdspaog" path="res://scripts/frame_2_cidadania.gd" id="1_khcsa"]
[ext_resource type="Texture2D" uid="uid://dtdm48yhtebik" path="res://assets/images/Frame 2 - O que é Cidadania_.png" id="1_thbsr"]
[ext_resource type="Texture2D" uid="uid://dkvqskbg8r0wf" path="res://assets/images/Components_Frame 2/Botão Soltar D_Civis.png" id="2_srkrl"]
[ext_resource type="Texture2D" uid="uid://d2r7aeun4v5uc" path="res://assets/images/Components_Frame 2/Botão Soltar D_Politicos.png" id="3_8bacb"]
[ext_resource type="Script" uid="uid://seyb1x4cecrk" path="res://scripts/Dropzone.gd" id="4_hdsiy"]
[ext_resource type="Texture2D" uid="uid://b58c6p6tdx5we" path="res://assets/images/Components_Frame 2/Botão Soltar D_Sociais.png" id="4_khcsa"]
[ext_resource type="Texture2D" uid="uid://cdfopk5gj6w6n" path="res://assets/button/ant_capa.png" id="4_sxjfl"]
[ext_resource type="Script" uid="uid://d26rndu622wp5" path="res://scripts/buttons.gd" id="5_agfjj"]
[ext_resource type="Texture2D" uid="uid://c44a0li12xthv" path="res://assets/button/prox.png" id="5_e3bs6"]
[ext_resource type="Texture2D" uid="uid://bipuaaaaoa2ir" path="res://assets/images/Components_Frame 2/Botão Direitos Civis.png" id="5_hdsiy"]
[ext_resource type="Script" uid="uid://b1e3tleva5dhe" path="res://scripts/Cards.gd" id="6_hdsiy"]
[ext_resource type="Texture2D" uid="uid://bp3fpqj3agsj0" path="res://assets/images/Components_Frame 2/Botão Direitos Sociais.png" id="6_t1bg0"]
[ext_resource type="Texture2D" uid="uid://c4e41n1fpjukl" path="res://assets/images/Components_Frame 2/Botão Direitos politicos.png" id="7_vtrdf"]
[ext_resource type="Texture2D" uid="uid://cryibh51d0ryv" path="res://assets/images/Components_Frame 2/2.2_BS_sociais.png" id="8_3voma"]
[ext_resource type="Texture2D" uid="uid://b1siwtnyuugnw" path="res://assets/images/Components_Frame 2/2.2_BS_politicos.png" id="9_o103n"]
[ext_resource type="Texture2D" uid="uid://db1v2sc73qq3t" path="res://assets/images/Components_Frame 2/2.2_BS_civis.png" id="10_uvmu2"]
[ext_resource type="Texture2D" uid="uid://dtwani5ywpffs" path="res://assets/images/Components_Frame 4/Balao.png" id="17_t1bg0"]
[ext_resource type="Texture2D" uid="uid://cgg20eapiun68" path="res://assets/images/Components_Frame 2/spritesheet_8_frames_fixed.png" id="18_3voma"]
[ext_resource type="Script" uid="uid://c13stbb0ndy85" path="res://scripts/sprite2dFrame2e8.gd" id="19_o103n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvmu2"]
bg_color = Color(0.847562, 0.841028, 0.969055, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Frame2_tscn" type="Node2D"]
script = ExtResource("1_khcsa")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 768.0
texture = ExtResource("1_thbsr")
metadata/_edit_lock_ = true

[node name="ControlCards" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 768.0
metadata/_edit_lock_ = true

[node name="DropZone" type="Control" parent="ControlCards"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DropCivis" type="TextureRect" parent="ControlCards/DropZone"]
layout_mode = 1
anchors_preset = -1
anchor_left = 10.525
anchor_top = 7.8
anchor_right = 14.325
anchor_bottom = 9.975
offset_left = -3.05176e-05
offset_top = 15.0
offset_bottom = 15.0
mouse_filter = 0
texture = ExtResource("2_srkrl")
script = ExtResource("4_hdsiy")
tipo_esperado = "civis"
metadata/_edit_lock_ = true

[node name="DropPoliticos" type="TextureRect" parent="ControlCards/DropZone"]
layout_mode = 1
anchors_preset = -1
anchor_left = 10.6
anchor_top = 10.225
anchor_right = 14.4
anchor_bottom = 12.2
offset_left = -8.0
offset_top = 15.0
offset_right = 1.0
offset_bottom = 16.0
mouse_filter = 0
texture = ExtResource("3_8bacb")
script = ExtResource("4_hdsiy")
tipo_esperado = "politicos"
metadata/_edit_lock_ = true

[node name="DropSociais" type="TextureRect" parent="ControlCards/DropZone"]
layout_mode = 0
offset_left = 417.0
offset_top = 514.0
offset_right = 578.0
offset_bottom = 594.0
mouse_filter = 0
texture = ExtResource("4_khcsa")
script = ExtResource("4_hdsiy")
tipo_esperado = "sociais"
metadata/_edit_lock_ = true

[node name="Cards" type="Control" parent="ControlCards"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CardCivis" type="TextureRect" parent="ControlCards/Cards"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078
anchor_top = 0.573
anchor_right = 0.371
anchor_bottom = 0.667
offset_left = 14.128
offset_top = -0.0640259
offset_right = 22.096
offset_bottom = 2.74396
mouse_filter = 0
texture = ExtResource("5_hdsiy")
script = ExtResource("6_hdsiy")
tipo_cartao = "civis"
metadata/_edit_lock_ = true

[node name="CardSociais" type="TextureRect" parent="ControlCards/Cards"]
layout_mode = 0
offset_left = 94.0
offset_top = 328.0
offset_right = 402.0
offset_bottom = 399.0
mouse_filter = 0
texture = ExtResource("6_t1bg0")
script = ExtResource("6_hdsiy")
tipo_cartao = "sociais"
metadata/_edit_lock_ = true

[node name="CardPoliticos" type="TextureRect" parent="ControlCards/Cards"]
layout_mode = 0
offset_left = 95.0
offset_top = 558.0
offset_right = 403.0
offset_bottom = 633.0
mouse_filter = 0
texture = ExtResource("7_vtrdf")
script = ExtResource("6_hdsiy")
tipo_cartao = "politicos"
metadata/_edit_lock_ = true

[node name="Piramide" type="Control" parent="ControlCards"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="balao_piramide" type="TextureRect" parent="ControlCards/Piramide"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.7
anchor_top = 5.55
anchor_right = 9.585
anchor_bottom = 12.333
offset_right = 26.6
offset_bottom = 22.68
texture = ExtResource("17_t1bg0")

[node name="Base" type="TextureRect" parent="ControlCards/Piramide"]
visible = false
layout_mode = 0
offset_left = 413.0
offset_top = 510.0
offset_right = 587.0
offset_bottom = 575.0
mouse_filter = 2
texture = ExtResource("8_3voma")

[node name="Meio" type="TextureRect" parent="ControlCards/Piramide"]
visible = false
layout_mode = 0
offset_left = 416.0
offset_top = 433.0
offset_right = 576.0
offset_bottom = 497.0
mouse_filter = 2
texture = ExtResource("9_o103n")

[node name="Topo" type="TextureRect" parent="ControlCards/Piramide"]
visible = false
layout_mode = 0
offset_left = 435.0
offset_top = 359.0
offset_right = 554.0
offset_bottom = 423.0
mouse_filter = 2
texture = ExtResource("10_uvmu2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 328.0
offset_top = 659.0
offset_right = 694.0
offset_bottom = 713.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="anterior" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_sxjfl")
flat = true
script = ExtResource("5_agfjj")

[node name="proximo" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_e3bs6")
flat = true
script = ExtResource("5_agfjj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprit2dPanel" type="Panel" parent="Control"]
clip_children = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 15.125001
anchor_top = 7.9000006
anchor_right = 23.175
anchor_bottom = 15.35
offset_left = -6.1035156e-05
offset_top = -3.0517578e-05
offset_right = -23.000122
theme_override_styles/panel = SubResource("StyleBoxFlat_uvmu2")

[node name="Sprite2D" type="Sprite2D" parent="Control/Sprit2dPanel"]
position = Vector2(150.99997, 149)
scale = Vector2(1.3999996, 1.3636363)
texture = ExtResource("18_3voma")
hframes = 8
frame = 6
script = ExtResource("19_o103n")
total_frames = 8
metadata/_edit_lock_ = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/anterior" to="VBoxContainer/HBoxContainer/anterior" method="pagAnterior"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/proximo" to="VBoxContainer/HBoxContainer/proximo" method="proxPag"]
